# provii-verifier

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.reproducible  LICENSE  README.md  SECURITY.md  build.rs  deny.toml  rust-toolchain.toml  wrangler.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  dependabot.yml  zizmor.yml
.github/workflows/: ci.yml  cla.yml  deploy.yml  fuzz.yml  mutants.yml  prod-bundle-check.yml  publish-openapi.yml  reproducibility-check.yml  sbom.yml  security-audit.yml  weekly-bundle-grep.yml
.semgrep/: provii-workers.yaml
benches/: argon2id_bench.rs
bins/ban-entry-decode/: Cargo.toml
bins/ban-entry-decode/src/: lib.rs  main.rs
bins/cors-tests/: Cargo.toml
bins/cors-tests/src/: lib.rs
bins/rate-limit-tests/: Cargo.toml
bins/rate-limit-tests/src/: lib.rs
config/: seed-docs-sandbox-client.txt  seed-docs-sandbox-origin-index.json  seed-docs-sandbox-tier.json  site_keys.json.example
crates/verifier-logic/: Cargo.toml
crates/verifier-logic/src/: docs_hmac.rs  error.rs  lib.rs  origin.rs  pkce.rs  session_binding.rs
fuzz/: Cargo.toml  fuzz_12h_all.sh  fuzz_12h_individual.sh  fuzz_12h_parallel.sh
fuzz/fuzz_targets/: fuzz_hmac_auth.rs  fuzz_input_validation.rs  fuzz_jwks_parsing.rs
openapi/: openapi.json
proptest-regressions/: error.txt
proptest-regressions/routes/: challenge.txt  redeem.txt
scripts/: reproducible-build.sh  wrangler-build.sh
signatures/: cla.json
src/: analytics.rs  bindings.rs  cache.rs  config.rs  error.rs  lib.rs  rate_limit_kv.rs  rate_limiting.rs  worker_bindings.rs  worker_routes.rs
src/clients/: credit_management.rs  mod.rs
src/durable_objects/: challenge_do.rs  challenge_lock_stub.rs  idempotency_do.rs  mod.rs  nonce_do.rs
src/hosted/: cookie.rs  cors.rs  encryption.rs  keys.rs  mod.rs  pkce.rs  rate_limiting.rs  session_binding.rs
src/hosted/durable_objects/: challenge_notify_do.rs  hosted_idempotency_do.rs  hosted_nonce_do.rs  mod.rs  sharding.rs
src/hosted/endpoints/: challenge.rs  csrf.rs  logout.rs  mod.rs  notify.rs  redeem.rs  session_check.rs  simulate.rs  status.rs  ws.rs
src/hosted/error/: codes.rs  mod.rs  sanitizer.rs
src/hosted/middleware/: body_size_limit.rs  mod.rs  request_validation.rs  sec_fetch.rs  security_headers.rs
src/hosted/storage/: kv.rs  mod.rs
src/hosted/types/: config.rs  errors.rs  mod.rs  requests.rs  responses.rs  session.rs  verification.rs
src/routes/: api_key_auth.rs  challenge.rs  csp_report.rs  health.rs  internal_admin.rs  internal_invalidate_jwks.rs  internal_version.rs  mod.rs  openapi.rs  ownership.rs  redeem.rs  schema_inference.rs  verify.rs
src/security/: audit.rs  auth.rs  docs_hmac.rs  envelope_encryption.rs  fetch_metadata.rs  hash.rs  headers.rs  idempotency.rs  log_sanitizer.rs  mod.rs  prefix_rejection.rs  secret_expiry.rs  secret_fingerprint.rs  secret_versions.rs  sri.rs  status_auth.rs  status_token_cache.rs  validation.rs
src/storage/: ban_store.rs  do_challenge_store.rs  durable_object_store.rs  idempotency_store.rs  jwks.rs  mod.rs  origin_policy.rs  traits.rs
src/types/: auth.rs  mod.rs  strict.rs
src/utils/: mod.rs  origin.rs  perf.rs  retry.rs  ssrf_protection.rs  timeout.rs  validation.rs
tests/: security.rs
tests/fixtures/: canonical_message_vectors.json
tests/load/: README.md
tests/security/: bola_protection_test.rs  canonical_message_test.rs  docs_hmac_test.rs  hmac_secret_encoding_test.rs  internal_traffic_guard_test.rs  prefix_rejection_test.rs  ssrf_protection_test.rs
tools/key-rotation/: Cargo.toml  README.md
tools/key-rotation/.cargo/: config.toml
tools/key-rotation/src/: main.rs
