# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2024-2026 Maelstrom AI Pty Ltd ATF Maelstrom AI Holding Trust
#
# Native-only CLI harness for the cross-language BanEntry JSON shape contract.
# Paired with
# `provii-management/tests/rotation/banentry-schema.test.ts`.
#
# Lives in a sibling crate (not the root `provii-verifier` package) because
# the root lib targets wasm32 with worker / wasm-bindgen deps that are not
# native-buildable. Cargo resolves `cargo run --bin ban-entry-decode` against
# the workspace declared in the root `Cargo.toml`, which sets this crate as
# `default-members`. Wasm CI continues to invoke
# `cargo clippy --package provii-verifier --lib --target wasm32-unknown-unknown`
# explicitly, so the wasm build path is unaffected.

[package]
name = "provii-verifier-ban-entry-decode"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[lib]
name = "provii_verifier_ban_entry_decode"
path = "src/lib.rs"

[[bin]]
name = "ban-entry-decode"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
