[package]
name = "verifier-key-rotation"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "MEK re-encryption CLI tool for provii-verifier KV data"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
aes-gcm = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
getrandom = "0.2"
urlencoding = "2"
